// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The component should render in checked state 1`] = `
<label
  class="label"
>
  <span
    class="switch"
  >
    <input
      checked=""
      type="checkbox"
    />
    <span />
  </span>
</label>
`;

exports[`The component should render in unchecked state 1`] = `
<label
  class="label"
>
  <span
    class="switch"
  >
    <input
      type="checkbox"
    />
    <span />
  </span>
</label>
`;

exports[`The component should render in with class 1`] = `
<label
  class="label"
>
  <span
    class="switch my-class"
  >
    <input
      type="checkbox"
    />
    <span />
  </span>
</label>
`;

exports[`The component should render in with type 1`] = `
<label
  class="label"
>
  <span
    class="switch my-class"
  >
    <input
      type="radio"
    />
    <span />
  </span>
</label>
`;
